<resources>
    <string name="app_name">DiceTacToe</string>
    <string name="game_board">Game Board</string>
    <string name="dice_results">Dice Results</string>
    <string name="game_controls">Game Controls</string>
    <string name="game_hints">Game Hints</string>
    <string name="dice_combinations">Dice Combinations:</string>
    <string name="placement_rules">Placement Rules:</string>

    <string name="roll_dice">Roll Dice</string>
    <string name="skip_rolls">Skip Rolls</string>
    <string name="new_game">New Game</string>
    <string name="adv">More</string>

    <string name="current_player_template">Player %s’s turn – %d rolls left</string>
    <string name="dice_instruction_start">Roll the dice to start the game</string>
    <string name="dice_instruction_turn">Player %s click ‘Roll Dice’ to begin your turn</string>
</resources>

